[package]
name = "deep_space"
version = "2.8.9"
authors = ["Justin Kilpatrick <justin@althea.net>", "Michał Papierski <michal@papierski.net>"]
repository = "https://github.com/althea-net/deep_space"
description = "A highly portable, batteries included, transaction generation and key management library for Cosmos blockchains"
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.21"
bech32 = "0.9"
bytes = "1.5"
cosmos-sdk-proto = { package = "cosmos-sdk-proto-althea", version = "0.13" }
hmac = "0.12"
log = "0.4"
num = "0.4"
pbkdf2 = "0.12"
prost = "0.10"
prost-types = "0.10"
rand = "0.8"
ripemd = "0.1"
rust_decimal = "1"
secp256k1 = "0.27"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["time"] }
tonic = { version = "0.7", features = ["compression"] }
u64_array_bigints = { version = "0.3", default-features = false, features = ["serde_support"] }
unicode-normalization = "0.1"

[dev-dependencies]
actix-rt = "2.9"
env_logger = "0.10"

[features]
